--- a/pages/Dashboard.html
+++ b/pages/Dashboard.html
@@ -433,10 +433,10 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
-    //   function showLoading() {
-    //     const loadingOverlay = document.getElementById("loadingOverlay");
-    //     loadingOverlay.classList.add("active");
-    //   }
+      function showLoading() {
+        const loadingOverlay = document.getElementById("loadingOverlay");
+        loadingOverlay.classList.add("active");
+      }
 
       // Hide loading animation
       function hideLoading() {
