--- a/pages/userRegistration.html
+++ b/pages/userRegistration.html
@@ -49,15 +49,15 @@
                 </div>
                 <br>
                 <div class="hei_we">
-                    <input type="number" id="height" name="height" placeholder="Height (cm)" required>
-                    <input type="number" id="weight" name="weight" placeholder="Weight (kg)" required>
+                    <input type="number" id="height" name="height" placeholder="Height (cm)">
+                    <input type="number" id="weight" name="weight" placeholder="Weight (kg)">
                 </div>
                 <br>
                 <label for="bodyFat">body measure</label>
                 <div class="body_measure">
-                    <input type="number" id="waistSize" name="waistSize" placeholder="waist size" required >
-                    <input type="number" id="neckSize" name="neckSize" placeholder="neck size" required>
-                    <input type="number" id="hipSize" name="hipSize" placeholder="hip size" required>
+                    <input type="number" id="waistSize" name="waistSize" placeholder="waist size"  >
+                    <input type="number" id="neckSize" name="neckSize" placeholder="neck size" >
+                    <input type="number" id="hipSize" name="hipSize" placeholder="hip size" >
                 </div><br>
                 
 
