--- a/pages/Dashboard.html
+++ b/pages/Dashboard.html
@@ -453,7 +453,7 @@
     <script src="./script_5.js"></script>
     <script>
       let darkMode = localStorage.getItem("colorMood");
-      const Room = document. uerySelector("#styleRoom");
+      const Room = document.querySelector("#styleRoom");
       const scriptRoom = document.querySelector("#scriptRoom");
       if (darkMode === "true") {
         Room.href = "./style.css";
